--- a/PopStudio.Avalonia/PopStudio.Avalonia.csproj
+++ b/PopStudio.Avalonia/PopStudio.Avalonia.csproj
@@ -42,15 +42,20 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.13" />
 	<PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
-   </ItemGroup>
-   <ItemGroup>
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="K4os.Compression.LZ4.Streams" Version="1.2.16" />
     <PackageReference Include="LZMA-SDK" Version="19.0.0" />
     <PackageReference Include="MoonSharp" Version="2.0.0" />
     <PackageReference Include="Portable.BouncyCastle" Version="1.9.0" />
-	<PackageReference Include="Microsoft.DotNet.ILCompiler" Version="7.0.0-preview.5.22272.1" />
-	<PackageReference Include="runtime.win-x64.Microsoft.DotNet.ILCompiler" Version="7.0.0-preview.5.22272.1" />
-  <PackageReference Include="runtime.osx-x64.Microsoft.DotNet.ILCompiler" Version="7.0.0-preview.5.22272.1" />
+	<PackageReference Include="Microsoft.DotNet.ILCompiler" Version="7.0.0-preview.4.22229.4" />
+    <PackageReference Include="runtime.osx-x64.Microsoft.DotNet.ILCompiler" Version="7.0.0-preview.4.22229.4" />
+	<PackageReference Include="runtime.linux-x64.Microsoft.DotNet.ILCompiler" Version="7.0.0-preview.4.22229.4" />
+	<PackageReference Include="runtime.linux-arm64.Microsoft.DotNet.ILCompiler" Version="7.0.0-preview.4.22229.4" />
+	<PackageReference Include="runtime.linux-musl-x64.Microsoft.DotNet.ILCompiler" Version="7.0.0-preview.4.22229.4" />
+    <PackageReference Include="runtime.linux-musl-arm64.Microsoft.DotNet.ILCompiler" Version="7.0.0-preview.4.22229.4" />
+	<PackageReference Include="runtime.win-x64.Microsoft.DotNet.ILCompiler" Version="7.0.0-preview.4.22229.4" />
+    <PackageReference Include="runtime.win-arm64.Microsoft.DotNet.ILCompiler" Version="7.0.0-preview.4.22229.4" />
   </ItemGroup>
   <Import Project="..\PopStudio.Language\PopStudio.Language.projitems" Label="Shared" />
   <Import Project="..\PopStudio.Shared\PopStudio.Shared.projitems" Label="Shared" />
